Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80934

[Reg 5.13->5.14] "Enable high DPI scaling" no longer working

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.14.1, 5.15.0 Alpha
    • 5.14.0
    • GUI: High-DPI
    • None
    • Windows10 1903
    • Windows
    • 24217594581e93b7ec3849fb56e49279c5cd3be2 (qt/qtbase/5.14)

      I switched from Qt5.13 to Qt5.14 today using the online installer. The new version of QtCreator doesn't seem to scale on hidpi monitors anymore. This use to work fine when using QtCreator's bin coming with 5.13 online installer. (see attached screenshot)

      I have the same problem on both my laptop and my desktop, both using Windows 10 1903.

      Thank you.

      I couldn't attached any image (Jira gives me an error message) please find screenshot below:

        1. qtCreator514_hidpi.gif
          1.84 MB
          Renaud Talon
        2. QtCreator_4_10_150.jpg
          437 kB
          Maik Kaemmerer
        3. QtCreator_4_10_175.jpg
          459 kB
          Maik Kaemmerer
        4. QtCreator_4_11_150.jpg
          388 kB
          Maik Kaemmerer
        5. QtCreator_4_11_175.jpg
          458 kB
          Maik Kaemmerer
        6. qtdiag_highdpi_150.jpg
          392 kB
          Maik Kaemmerer
        7. qtdiag_highdpi_175.jpg
          489 kB
          Maik Kaemmerer
        8. qt5.14_scaling_issue_hidpi.jpg
          1.93 MB
          Renaud Talon
        9. PySide2_5.14_scaling issue.jpg
          96 kB
          Renaud Talon
        10. Qt5.14_scaling_issue.py
          1 kB
          Renaud Talon
        11. QBadge.py
          2 kB
          Renaud Talon
        12. screenshot-1.png
          13 kB
          Igor Lifanov
        13. screenshot-2.png
          6 kB
          Igor Lifanov
        14. screenshot-3.png
          46 kB
          Igor Lifanov
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            talonrenaud Renaud Talon
            Votes:
            2 Vote for this issue
            Watchers:
            14 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes